- 
    Bug 
- 
    Resolution: Fixed
- 
    P3: Somewhat important 
- 
    5.12.0 RC2
- 
    None
If you try to run a simple 'qmlscene.exe main.qml -platform webgl' from the MSVC2017 32bit packages from the online installer, the qmlscene process crashes as soon as you try to connect to the process through the browser. Infact not only qmlscene, but any application that uses the WebGL plugin from above package will crash (the backtrace pointed to somewhere in Qt5Core, have no more details, since I have only a release build here).
Using qmlscene from the MSVC2017 64bit package from the online installer works perfectly fine, so there must be some difference between the 32bit and 64bit build of the packages from online installer that causes the issues.
It would be nice if that could get fixed before 5.12 final, since that makes a bad impression for anyone who uses the 32bit package.
| For Gerrit Dashboard: QTBUG-72129 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 247205,10 | Fix calling convention in Win32 | 5.12 | qt/qtwebglplugin | Status: MERGED | +2 | 0 |