Fix calling convention in Win32

A mismatch with the calling convention was messing up the stack
of the caller function. OpenGL calls in Win32 are expected to be
using the call convention defined in GL_APIENTRY instead of the
compiler default.

Task-number: QTBUG-72129
Change-Id: I460b083a2cb03a297904a2bcfd13e7e704b2e136
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>